--- a/.github/workflows/update_migrations.yml
+++ b/.github/workflows/update_migrations.yml
@@ -6,12 +6,7 @@ name: Update Migrations
 on:
   # Triggers the workflow on push or pull request events but only for the develop branch
   push:
-    branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
