--- a/.github/workflows/update_migrations.yml
+++ b/.github/workflows/update_migrations.yml
@@ -19,7 +19,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Merge master -> migrations
-        run: uses devmasx/merge-branch@v1.3.1
+        uses: devmasx/merge-branch@v1.3.1
         with:
           type: now
           from_branch: master
